# stacksprout

./: .gitignore  README.md  pyproject.toml
examples/: binary_tree_sum.py  factorial.py  fib.py
stacksprout/: __init__.py  animation.py  canvas_utils.py  graph_renderer.py  interactions.py  layout.py  tracer.py  tree_to_grid.py  ui.py  visualizer.py
