[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stacksprout"
version = "0.1.0"
description = "Visualize recursive Python functions as interactive call trees with timeline-based animation."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Yusif Hidayetzade" }
]
requires-python = ">=3.10"

dependencies = ["sortedcontainers"]

[project.urls]
Homepage = "https://github.com/hidayetzadeyusif-cell/stacksprout"
Repository = "https://github.com/hidayetzadeyusif-cell/stacksprout"
