[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stacksprout"
version = "0.1.1"
description = "Visualize recursive Python functions as interactive call trees with timeline-based animation."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Yusif Hidayetzade" }
]
requires-python = ">=3.10"

dependencies = ["sortedcontainers"]

keywords = ["recursion", "visualization", "education", "debugging"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Intended Audience :: Education",
    "Topic :: Software Development :: Debuggers",
]

[tool.setuptools]
packages = ["stacksprout"]
include-package-data = true

[project.urls]
Homepage = "https://github.com/hidayetzadeyusif-cell/stacksprout"
Repository = "https://github.com/hidayetzadeyusif-cell/stacksprout"
